{
    "name": "BaseControls",
    "maps": [
        {
            "name": "CameraControl",
            "id": "d172a889-b247-415c-a2e9-5245b2f43145",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "PassThrough",
                    "id": "2f7ec77f-76c2-4e33-aa4a-c6f4c31d342a",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "bd5a6133-6c13-42f1-8f2a-f06d33c727c9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "c371aabf-2386-4652-890e-6039b842ac91",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "6b999908-ae08-4b9a-a34a-16d681529578",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePress",
                    "type": "Button",
                    "id": "5458431b-255c-438c-a952-d01bd535a0e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "ef0b17bd-03bc-4742-9eda-a088587b1ad9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryFingerPosition",
                    "type": "Value",
                    "id": "2d65f02d-97c7-435f-9014-7803e43dfda8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "Button",
                    "id": "29f0e9af-25a9-4086-a930-140e21183b80",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7ad55247-46e6-492e-83b6-29dbb470a9be",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a74a8b9-50de-472c-8898-cc2ffa6ac090",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6da2981e-5242-47e7-872d-fbb8805e2a45",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Android",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29964d72-5789-4eba-a688-b0a73e3c2a51",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4822cdda-c346-4255-b559-5c509d3f1799",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "MousePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b0887b2-9602-4dbc-8faf-6ebc8551839d",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7a474a5-3caa-4086-ac66-60b748b63f6c",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android",
                    "action": "SecondaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2cdf7947-4c0c-4ce3-9e05-51d43c918236",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Editor",
            "id": "c7f17937-89f0-44a5-958f-3b729c71e204",
            "actions": [
                {
                    "name": "SetCell",
                    "type": "Button",
                    "id": "074a6955-fe99-417f-937d-41d2eff01606",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "47489c87-f566-488a-9b6c-079633b65a6c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0457f356-c85d-4c70-a5c0-b7c6cc640b7b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "SetCell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfc61c75-2a85-45e8-a547-24dd84beead2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse&Keyboard",
            "bindingGroup": "Mouse&Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Android",
            "bindingGroup": "Android",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}